--- a/index.html
+++ b/index.html
@@ -200,11 +200,11 @@
             <div class="about-container">
             <div class="details-container colour-container">
                 <div class="article-container">
-                    <img src="./assets/project-1.png" alt="project 1" class="project-img">
+                    <img src="./assets/sign language.png" alt="project 1" class="project-img">
                 </div>
-                    <h2 class="experience-sub-title project-title">Project One</h2>
+                    <h2 class="experience-sub-title project-title">Sign Language Detection</h2>
                     <div class="btn-container">
-                        <button class="btn btn-colour-2 project-btn" onclick="location.href='https://github.com/mansisingh221'">
+                        <button class="btn btn-colour-2 project-btn" onclick="location.href='https://github.com/mansisingh221/Sign-Language-detection'">
                             Github
                         </button>
                     </div>
