--- a/index.html
+++ b/index.html
@@ -212,11 +212,11 @@
 
             <div class="details-container colour-container">
                 <div class="article-container">
-                    <img src="./assets/project-2.png" alt="project 1" class="project-img">
+                    <img src="./assets/weather2.png" alt="project 1" class="project-img">
                 </div>
-                    <h2 class="experience-sub-title project-title">Project Two</h2>
+                    <h2 class="experience-sub-title project-title">Weather Forecast management system</h2>
                     <div class="btn-container">
-                        <button class="btn btn-colour-2 project-btn" onclick="location.href='https://github.com/mansisingh221'">
+                        <button class="btn btn-colour-2 project-btn" onclick="location.href='https://github.com/mansisingh221/Weather-forecasting'">
                             Github
                         </button>
                     </div>
