--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             </div>
             </div>
         </div>
-        <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#projects'">
+        <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#contact'">
     </section>
     <section id="contact">
         <p class="section__text__p1">
