--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mansi Portfolio</title>
+    <title>Daniyaal Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mediaqueries.css">
 </head>
 <body>
     <nav id="desktop-nav">
-        <div class="logo">Mansi Singh</div>
+        <div class="logo">Mohammad Daniyaal Mustafa</div>
         <div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
@@ -20,7 +20,7 @@
         </div>
     </nav>
     <nav id="hamburger-nav">
-        <div class="logo">Mansi Singh</div>
+        <div class="logo">Mohammad Daniyaal Mustafa</div>
         <div class="hamburger-menu">
                 <div class="hamburger-icon" onclick="toggleMenu()">
                     <span></span>
@@ -37,14 +37,14 @@
     </nav>
     <section id="profile">
         <div class="section__pic-container">
-            <img src="./assets/download.png" alt="Mansi profile Picture">
+            <img src="./assets/passport photo.png" alt="My Picture">
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
-            <h1 class="title">Mansi</h1>
-            <p class="section__text__p2">Frontend developer | Data analyst | Business analyst | Software developer</p>
+            <h1 class="title">Daniyaal</h1>
+            <p class="section__text__p2">Frontend developer | Data analyst | AI & ML engineer | Software developer | UI/UX developer | Content Writer</p>
             <div class="btn-container">
-                <button class="btn btn-colour-2" onclick="window.open('./assets/mansi resume ats.pdf')">Resume
+                <button class="btn btn-colour-2" onclick="window.open('./assets/Daniyaal Resume.pdf')">Resume
                     
                 </button>
                 <button class="btn btn-colour-1" onclick="location.href= './#contact' ">Contact
@@ -52,8 +52,8 @@
                 </button>
             </div>
             <div id="socials-container">
-                <img src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon" onclick="location.href='https://www.linkedin.com/in/mansi-singh-241b5522b/'">
-                <img src="./assets/github.png" alt="My Github profile" class="icon" onclick="location.href='https://github.com/mansisingh221'">
+                <img src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon" onclick="location.href='https://www.linkedin.com/in/mohammad-daniyaal-mustafa-388754195/'">
+                <img src="./assets/github.png" alt="My Github profile" class="icon" onclick="location.href='https://github.com/Disco-Danny'">
             </div>
         </div>
     </section>
@@ -64,14 +64,14 @@
         <h1 class="title">About me</h1>
         <div class="section-container">
             <div class="section__pic-container">
-                <img src="./assets/download (1).png" alt="Profile picture" class="about-pic">
+                <img src="./assets/Pic 2.jpg" alt="Profile picture" class="about-pic">
             </div>
             <div class="about-details-container">
                 <div class="about-containers"> 
                 <div class="details-container">
                     <img src="./assets/experience.png" alt="experience icon" class="icon">
                     <h3>Experience</h3>
-                    <p>4 months<br>Database admin intern</p>
+                    <p>4 months<br>Freelance UI/UX designer</p>
                 </div>
                 <div class="details-container">
                     <img src="./assets/education.png" alt="Education icon" class="icon">
@@ -80,7 +80,7 @@
                 </div>
                 </div>
                 <div class="text-container">
-                    <p>A 20-something year old fresher who got her hands dirty in a lot of different domains to figure out what is best for her. This - Frontend,  happens to be one of the many domains she seeks "Enlightenment" in. <br><br>Gifted with an amiable personality and social skills that precedes her reputation, a better fit for any domain that she seeks a career in, is hard to get by. </p>
+                    <p>A very passionate and goal oriented person in his 20s who strives for perfection and doesnt give up until satsified with his work.<br><br>With a natural tendency to form quick connections with people from any strata of the society, he is learns more than he imparts, as learning never stops for him. </p>
                 </div>
             </div>
            
@@ -130,13 +130,13 @@
                     </div>
                 </div>
                 <div class="details-container">
-                    <h2 class="experience-sub-title">Business Strategist</h2>
+                    <h2 class="experience-sub-title">Machine Learning</h2>
                     <div class="article-container">
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience icon"
                             class="icon">
                             <div>
-                                <h3>Digital Marketing</h3>
+                                <h3>Python</h3>
                                 <p>Intermediate</p>
                             </div>
                         </article>
@@ -152,7 +152,7 @@
                             <img src="./assets/checkmark.png" alt="Experience icon"
                             class="icon">
                             <div>
-                                <h3>Problem Solving and Critical Thinking</h3>
+                                <h3>ML libraries (sci-kit, tensorflow)</h3>
                                 <p>Intermediate</p>
                             </div>
                         </article>
@@ -200,11 +200,11 @@
             <div class="about-container">
             <div class="details-container colour-container">
                 <div class="article-container">
-                    <img src="./assets/sign language.png" alt="project 1" class="project-img">
+                    <img src="./assets/drug.png" alt="project 1" class="project-img">
                 </div>
-                    <h2 class="experience-sub-title project-title">Sign Language Detection</h2>
+                    <h2 class="experience-sub-title project-title">Drug Recommender</h2>
                     <div class="btn-container">
-                        <button class="btn btn-colour-2 project-btn" onclick="location.href='https://github.com/mansisingh221/Sign-Language-detection'">
+                        <button class="btn btn-colour-2 project-btn" onclick="location.href='https://github.com/Disco-Danny/Drug-recommender'">
                             Github
                         </button>
                     </div>
@@ -212,12 +212,12 @@
 
             <div class="details-container colour-container">
                 <div class="article-container">
-                    <img src="./assets/weather2.png" alt="project 1" class="project-img">
+                    <img src="./assets/adobe.png" alt="project 1" class="project-img">
                 </div>
-                    <h2 class="experience-sub-title project-title">Weather Forecast management system</h2>
+                    <h2 class="experience-sub-title project-title">Landing Page for edtech startup
                     <div class="btn-container">
-                        <button class="btn btn-colour-2 project-btn" onclick="location.href='https://github.com/mansisingh221/Weather-forecasting'">
-                            Github
+                        <button class="btn btn-colour-2 project-btn" onclick="location.href='https://drive.google.com/file/d/1IE1liWlF-tEjhIiwgPpkm0vNbERJCqyz/view?usp=sharing'">
+                            Drive
                         </button>
                     </div>
             </div>
@@ -233,11 +233,11 @@
         <div class="contact-info-upper-container">
             <div class="contact-info-container">
                 <img src="./assets/email.png" alt="email icon" class="icon contact-icon">
-                <p><a href="mailto:mans.singh2201@gmail.com">Mans.singh2201@gmail.com</a></p>
+                <p><a href="mailto:mustafadaniyal7@gmail.com">Mustafadaniyal7@gmail.com</a></p>
             </div>
             <div class="contact-info-container">
                 <img src="./assets/linkedin.png" alt="linkedin icon" class="icon contact-icon">
-                <p><a href="https://www.linkedin.com/in/mansi-singh-241b5522b/">LinkedIn</a></p>
+                <p><a href="https://www.linkedin.com/in/mohammad-daniyaal-mustafa-388754195/">LinkedIn</a></p>
             </div>
         </div>
     </section>
